--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ gradle-app.setting
 
 
 
+/src/main/resources/static/assets/profileimg/*
 
 !/src/main/resources/static/assets/profileimg/profile-dummy.png
 
